# happeteer

./: README.md  happeteer.cabal  package.yaml  stack.yaml
js/: fetch-image-base64.js  resolve-uri.js
src/: Happeteer.hs
test/: HappeteerTest.hs  scrap-json.js
