name:                happeteer
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/happeteer#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Happeteer
  build-depends:       base >= 4.7 && < 5
                    ,  process >= 1.4 && < 1.5
                    ,  containers >= 0.5 && < 0.7
                    ,  url >= 2.1 && < 2.2
                    ,  text >= 1.2 && < 1.3
                    ,  JuicyPixels >= 3.3 && < 3.4
                    ,  bytestring >= 0.10 && < 0.11
                    ,  base64-bytestring >= 1.0 && < 1.1
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/happeteer
